# ChangeLog for dev-util/metro
# Copyright 2008-2009 Funtoo Technologies, LLC; Distributed under the GPL v2

  07 Nov 2008; Daniel Robbins <drobbins@funtoo.org> metro-1.1.ebuild: added
  missing dev-util/git runtime dep. D'oh!

*metro-1.1 (05 Nov 2008)

  05 Nov 2008; Daniel Robbins <drobbins@funtoo.org> metro-1.1.ebuild: initial
  Portage-based release.
